@@ -14,6 +14,8 @@ git-annex (5.20150206) UNRELEASED; urgency=medium
     or --duplicate mode.
   * Windows: Fix bug in dropping an annexed file, which
     caused a symlink to be staged that contained backslashes.
+  * webapp: Fix reversion in opening webapp when starting it manually
+    inside a repository.
 
  -- Joey Hess <id@joeyh.name>  Fri, 06 Feb 2015 13:57:08 -0400
 
